--- a/知识点总结.md
+++ b/知识点总结.md
@@ -86,3 +86,82 @@
     - 有效避免多重条件选择语句
     - 提供了对外开放封装原则的完美支持，将方法封装在独立的strategy中，使得它们易于切换、易于理解、易于扩展
     - 便于复用
+* 缺点：
+    - 增加了策略类/对象的使用
+    - 使用策略模式，必须先了解所有的strategy，违反了最少知识原则
+* 示例：
+    ```
+    <template>
+      <div class="container">
+        <Form :model="formData" ref="my-form" :rules="formValidate" :label-width="100">
+          <FormItem label="姓名" prop="name">
+            <Input v-model="formData.name"></Input> 
+          </FormItem>
+          <FormItem label="姓别">
+            <RadioGroup v-model="formData.sex">
+              <Radio label="male">Male</Radio>
+              <Radio label="female">Female</Radio>
+            </RadioGroup>
+          </FormItem>
+          <FormItem label="出生日期" prop="date">
+            <DatePicker type="date" placeholder="Select date" v-model="formData.date" @on-change="formData.date=$event"></DatePicker>
+          </FormItem>
+          <FormItem label="所在地" prop="area">
+            <cityPicker @getCpData="getData" />
+          </FormItem>
+          <FormItem>
+            <Button type="primary" @click="submit('my-form')">提交</Button>
+          </FormItem>
+        </Form>
+      </div>
+    </template>
+    <script>
+      import cityPicker from '@/components/tools/cityPicker'
+      export default {
+        components: {cityPicker},
+        data() {
+          return {
+            formData: {
+              name: '',
+              sex: 'male',
+              date: '',
+              area: '',
+            },
+            formValidate: {
+              name: [{ required: true, message: 'The name cannot be empty', trigger: 'blur' }],
+              date: [{ required: true, message: 'Please select time', trigger: 'change' }],
+              area: [{ required: true, message: 'Please select area', trigger: 'change' }],
+            }
+          }
+        },
+        methods: {
+          submit(name) {
+            this.$refs[name].validate(valid => {
+              if(valid) {
+                this.$Modal.success({
+                  title: '提示',
+                  content: '保存成功！'
+                });
+              }
+            });
+            // if(this.formData.name.length == 0) {
+            //   this.$Message.error('请输入姓名');
+            // } else if(this.formData.date.length == 0) {
+            //   this.$Message.error('请输入出生日期');
+            // } else if(this.formData.area.length == 0) {
+            //   this.$Message.error('请输入所在地');
+            // } else {
+            //   this.$Modal.success({
+            //     title: '提示',
+            //     content: '保存成功！'
+            //   });
+            // }
+          },
+          getData(o) {
+            console.log('o', o);
+            this.formData.area = o.prov_name + o.city_name + o.area_name;
+          },
+        }
+      }
+    </script>
+    ```
