--- a/知识点总结.md
+++ b/知识点总结.md
@@ -1,4 +1,4 @@
-# 改写if else  
+# （一）改写if else的几种方式
 
 ### 1.switch  
 * 优点：
@@ -165,3 +165,66 @@
       }
     </script>
     ```
+
+=======================================================================
+
+# （二）js的防抖节流  
+
+#### 为什么要做防抖节流？  
+
+*在进行窗口的resize、scroll，输入框内容校验等操作时，如果事件处理函数调用的频率无限制，会加重浏览器的负担，导致用户体验非常糟糕。此时我们可以采用debounce（防抖）和throttle（节流）的方式来减少调用频率，同时又不影响实际效果。*
+
+#### 防抖  
+
+>对于短时间内连续触发的事件（如滚动事件），防抖的含义就是让某个时间期限内，事件处理函数只执行一次。
+* 实现方式： 定时器
+
+```
+<script>
+  // 使用jq
+  let timer = null;
+  $(window).on('scroll', function() {
+    timer && clearTimeout(timer);
+    timer = setTimeout(() => {
+      // 要执行的代码
+      ...
+    }, 600);
+  });
+  // 使用vue & lodash
+  fnName: _.debounce(function() {
+    // 要执行的代码
+    ...
+  }, 600)
+</script>
+```
+#### 节流  
+
+>一般而言，使用防抖（debounce）已经能够满足我们的需求。但是，防抖本身也会产生一个问题，那就是在连续
+>触发事件不间断时，我们的事件处理函数是不会执行的。这个时候，我们可以优化的地方是，即使用户不间断的触发
+>事件（如滚动事件），我们也可以定期触发一次事件处理函数，这就是**节流**(throttle)。
+* 实现方式：定时器 + 时间戳
+
+```
+let throttle = function(func, delay) {
+  let prev = Date.now();
+  return function() {
+    let context = this;   //this指向window
+    let args = arguments;
+    let now = Date.now();
+    if (now - prev >= delay) {
+      func.apply(context, args);
+      prev = Date.now();
+    }
+  }
+}
+function handle() {
+  // 要执行的代码
+  ...
+}
+window.addEventListener('scroll', throttle(handle, 1000));
+// 使用vue & lodash
+fnName: _.throttle(function() {
+// 要执行的代码
+...
+}, 1000),
+```
